# funding

./: .dockerignore  .env_example  .gitignore  DEPLOY.md  Dockerfile  HOW_TO_RUN.txt  README.md  main.py  pyproject.toml
app/connectors/: __init__.py  apex.py  aster.py  backpack.py  base.py  binance.py  bingx.py  bitget.py  bybit.py  config.py  gate.py  hyperliquid.py  lighter.py  okx.py  phemex.py  reya.py
app/connectors/model/: funding.py  position.py  state.py
app/engine/: __init__.py  engine.py
app/engine/model/: pair.py  structure.py
app/helper/: decoder.py  decrypt_keys.py  encrypt_keys.py  key_vault.py
app/telegram/: __init__.py  formatters.py  queue.py  service.py  state_broadcaster.py
data/: .alert_messages.json  .state_messages.json  pairs-example.json
live-test/: creds.example  live_test.py  test-params.json.example
tests/: test_auto_close.py
tests/connectors/: test_aster.py  test_backpack.py  test_hyperliquid.py
tests/prod/: test_app.py
tests/unit/: conftest.py  test_base_connector.py  test_binance_connector.py  test_connector_config.py  test_engine.py  test_formatters.py  test_place_order_and_verify.py  test_queue.py
