[tool.poetry]
name = "funding"
version = "0.2.0"
description = ""
authors = ["VasyaPup"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
httpx = ">=0.27"
python-dotenv = ">=1.0"
tzdata = ">=2024.1"
cryptography = "44.0.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.23"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
